Update to react 0.13.2

--- a/.jshintrc
+++ b/.jshintrc
@@ -28,6 +28,7 @@
         "it": false,
         "expect": false,
         "spyOn": false,
-        "module": false
+        "module": false,
+        "React": false
     }
 }
